--- a/css/elm-mathui.css
+++ b/css/elm-mathui.css
@@ -126,8 +126,8 @@ html, input {
 }
 
 .mathui-LambdaRight {
-  border: 4px solid rgba(186, 218, 85, 0.72);
-  padding: 0.2em;
+  border: 0.15em solid rgba(186, 218, 85, 0.72);
+  padding: 0.7em;
   border-radius: 0.1em;
 }
 
